--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
         <button class=" px-20 md:px-40 py-4 bg-black text-white">View All Posts</button>
     </div>
 
-    <div id="gallery" class="w-full lg:w-3/4 mx-auto my-16">
-        <h4 class="text-2xl my-5 max-sm:text-center">GALLERY</h4>
+    <div id="gallery" class="w-full flex flex-col max-sm:items-center lg:w-3/4 mx-auto my-16">
+        <h4 class="text-2xl my-5">GALLERY</h4>
         <div class="flex flex-col md:flex-row gap-5">
             <img class="w-11/12 mx-auto lg:w-1/4 " src="https://images.unsplash.com/photo-1604580040660-f0a7f9abaea6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTV8fGludGVyaW9yJTIwZGVzaWdufGVufDB8MHwwfHx8Mg%3D%3D">
             <img class="w-11/12 mx-auto lg:w-1/4 " src="https://images.unsplash.com/photo-1572048572872-2394404cf1f3?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NzF8fGludGVyaW9yJTIwZGVzaWdufGVufDB8MHwwfHx8Mg%3D%3D">
